Fonction de recherche de sites implémentée. Affichage du détail d'un site sans commentaire

--- a/src/main/resources/templates/generique.html
+++ b/src/main/resources/templates/generique.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="fr">
+<html xmlns:th="http://thymeleaf.org" lang="fr">
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title>Escalade</title>
     <meta name="description" content="Site officiel des Amis de l'Escalade">
     <meta name="keywords" content="escalade, topo, grimpeur">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon"   th:href="@{/img/montagne-sm.png}" />
+
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
