--- a/src/main/resources/templates/generique.html
+++ b/src/main/resources/templates/generique.html
@@ -40,7 +40,7 @@
 
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuSite" nomRole="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuSite" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="far fa-images"></i> Sites
                     </a>
@@ -52,7 +52,7 @@
 
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuTopo" nomRole="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuTopo" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-book"></i> Topos
                     </a>
@@ -80,7 +80,7 @@
 
         </div>
     </nav>
-    
+
 
 </header>
 
