--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="fr" xmlns:th="http://www.thymeleaf.org">   <!--xmlns ns=name space*/-->
 <head>
+<!--    todo a detruire-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +27,7 @@
                 <img th:src="@{/img/logo.png}" alt="memorynotfound logo"/>
             </a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
+        <div utilisateurId="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">Accueil</a></li>
