--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,7 +85,7 @@
 <footer th:insert="generique.html :: footer"></footer>
 
 <!-- Respecter l'ordre des scripts ; jQuery first, then Popper.js, then Bootstrap JS, puis notre propre script.js -->
-<!-- include javascript (tentative des remplacement des référence absolues par URL précédentes ci-dessous-->
+<!-- include javascript (tentative de remplacement des références absolues par URL précédentes ci-dessous-->
 <script type="text/javascript" src="webjars/jquery/3.3.1/jquery.min.js/"></script>
 <script type="text/javascript" src="webjars/popper.js/1.14.3/popper.min.js"></script>
 <script type="text/javascript" src="webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
