--- a/src/main/resources/templates/listesites.html
+++ b/src/main/resources/templates/listesites.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="fr" xmlns:th="http://thymeleaf.org">
+<html lang="fr" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://thymeleaf.org">
 <head th:replace="generique :: head"></head>
 
 <body>
-<header th:insert="generique.html :: nav"></header>
+<header th:replace="generique :: nav"></header>
 <div class="container">
     <br/>
     <h2>Sites d'escalade</h2>
