--- a/src/main/resources/templates/site.html
+++ b/src/main/resources/templates/site.html
@@ -7,7 +7,7 @@
 <div class="container">
     <H1 class="monTitre" th:text="${site.nomSite}">Nom du SITE</H1>
     <div class="row align-items-center">
-        <img class="rounded float-left col-md-3" th:src="@{'/img/' + ${site.photo}}" th:title="${site.nomSite}" alt="..."/>
+        <img class="rounded col-md-3" th:src="@{'/img/' + ${site.photo}}" th:title="${site.nomSite}" alt="..."/>
         <div class="col-sm-12 col-md-6">
             <div class="row justify-content-end">
                 <img class="col-sm-6 col-md-3" th:src="@{/img/officiel.png}" alt="site officiel"/>
@@ -16,13 +16,35 @@
             <P>Difficulté : de <strong th:text="${site.cotationMin}"></strong> à <strong th:text="${site.cotationMax}"></strong></P>
             <P th:text="${site.region.nomRegion}"></P>
         </div>
-
+    </div>
+    <hr>
+    <div>
+        <H4>Laissez un commentaires</H4>
+        <form action="#" th:action="@{/ajoutercommentaire}" method="post">
+            <div class="input-group mb-3">
+                <input id="siteid" name="siteid" type="hidden" th:value="${site.siteid}">
+                <input type="text" name="texteCommentaire" class="form-control" placeholder="Votre commentaire..." aria-label="" aria-describedby="bouton-ajouter">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="submit" id="bouton-ajouter">Ajouter</button>
+                </div>
+            </div>
+        </form>
+        <HR>
+        <div>
+            <th:block th:each="commentaire : ${site.commentaires}">
+                <p>
+                    <strong th:text="${commentaire.utilisateur.pseudo}"></strong>
+                    <i> le </i>
+<!--                    <i th:text="${#calendars.format(commentaire.dateRedaction,'dd MMM yyyy - HH:mm')}"></i>-->
+                    <i th:text= "${#temporals.format(commentaire.dateRedaction,'dd MMM yyyy - HH:mm')}"></i>
+                </p>
+                <P class="col-md-10 offset-md-1" th:text="${commentaire.texteCommentaire}"></P>
+                <hr>
+            </th:block>
+        </div>
     </div>
 
-
 </div>
-
-<hr>
 
 <footer th:insert="generique.html :: footer"></footer>
 
